# graphica

./: Cargo.toml  README.md  build.rs  build_shaders.sh
benches/: my_benchmark.rs
shaders/: background.frag  background.frag.spv  background.vert.spv  background.wgsl  blend_over.comp  blend_over.comp.spv  blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  blit.wgsl  blur.comp  blur.comp.spv  blur.wgsl  brush.frag  brush.frag.spv  brush.vert  brush.vert.spv  brush.wgsl  clone_brush.frag  clone_brush.frag.spv  clone_brush.vert  clone_brush.vert.spv  clone_brush.wgsl  clone_brush_batch.comp  clone_brush_batch.comp.spv  clone_brush_blit.frag  clone_brush_blit.frag.spv  clone_brush_blit.vert  clone_brush_blit.vert.spv  clone_brush_single.comp  clone_brush_single.comp.spv  color_spaces.glsl  downsample_2x2_box.comp  downsample_2x2_box.comp.spv  error_shader.wgsl  geometry.frag.spv  geometry.vert  geometry.vert.spv  geometry.wgsl  (+2 more)
src/: blend_modes.rs  blitter.rs  blur.rs  brush_editor.rs  brush_manager.rs  canvas.rs  catmull_rom.rs  config.rs  egui_wrapper.rs  encoder.rs  fps_limiter.rs  geometry_utilities.rs  gpu_profiler.rs  gui.rs  input.rs  lib.rs  main.rs  material_cache.rs  mipmap.rs  path.rs  path_collection.rs  path_editor.rs  persistent_graph.rs  render_graph.rs  render_pipeline_cache.rs  shader.rs  something.rs  test.rs  texture.rs  toolbar.rs  vertex.rs  wgpu_utils.rs
src/cache/: bind_group_cache.rs  ephermal_buffer_cache.rs  material_cache.rs  mod.rs  render_pipeline_cache.rs  render_texture_cache.rs
src/nodes/: blit.rs  cache.rs  clear.rs  mod.rs  vector_strokes.rs
